complete remake of all code; all functions stated in the readme work

--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
   },
-  "description": ""
+  "description": "Данный проект представляет собой веб-приложение, реализованное с использованием технологий EJS для фронтенда, Node.js для бэкенда и PostgreSQL в качестве системы управления базами данных (СУБД). Приложение поддерживает две роли пользователей: обычный пользователь и администратор.",
+  "devDependencies": {}
 }
