--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
@@ -24,6 +25,5 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
   },
-  "description": "Данный проект представляет собой веб-приложение, реализованное с использованием технологий EJS для фронтенда, Node.js для бэкенда и PostgreSQL в качестве системы управления базами данных (СУБД). Приложение поддерживает две роли пользователей: обычный пользователь и администратор.",
-  "devDependencies": {}
+  "description": "Данный проект представляет собой веб-приложение, реализованное с использованием технологий EJS для фронтенда, Node.js для бэкенда и PostgreSQL в качестве системы управления базами данных (СУБД). Приложение поддерживает две роли пользователей: обычный пользователь и администратор."
 }
