--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ DB_PORT=5432
 DB_NAME='postgres'
 JWT_SECRET='Xf7rDDlHztEzaSH6ZmaojOmIWiwbCdlv'
 PORT=3000
+FTP_HOST='ftpupload.net'
+FTP_USER='if0_37825588'
+FTP_PASSWORD='321456987pro10E'
+FTP_BASE_URL='//img-storage.000.pe'
