--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "ftp": "^0.3.10",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
   },
-  "description": "Данный проект представляет собой веб-приложение, реализованное с использованием технологий EJS для фронтенда, Node.js для бэкенда и PostgreSQL в качестве системы управления базами данных (СУБД). Приложение поддерживает две роли пользователей: обычный пользователь и администратор."
+  "description": "Данный проект представляет собой веб-приложение, реализованное с использованием технологий EJS для фронтенда, Node.js для бэкенда и PostgreSQL в качестве системы управления базами данных (СУБД). Приложение поддерживает две роли пользователей: обычный пользователь и администратор.",
+  "devDependencies": {}
 }
