changed image storage server

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ DB_NAME='postgres'
 JWT_SECRET='Xf7rDDlHztEzaSH6ZmaojOmIWiwbCdlv'
 PORT=3000
 FTP_HOST='ftpupload.net'
-FTP_USER='if0_37825588'
-FTP_PASSWORD='321456987pro10E'
-FTP_BASE_URL='//img-storage.000.pe'
+FTP_USER='if0_37909420'
+FTP_PASSWORD='321456987pro10Z'
+FTP_BASE_URL='//www.img-storage.rf.gd'
