--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DB_USERNAME='postgres'
-DB_PASSWORD=1337
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME='postgres'
-JWT_SECRET='Xf7rDDlHztEzaSH6ZmaojOmIWiwbCdlv'
-PORT=3000
-FTP_HOST='ftpupload.net'
-FTP_USER='if0_37909420'
-FTP_PASSWORD='321456987pro10Z'
-FTP_BASE_URL='//www.img-storage.rf.gd'
+DB_USERNAME='YOUR-DB-USERNAME'
+DB_PASSWORD=YOUR-DB-PASSWORD
+DB_HOST=YOUR-DB-HOST
+DB_PORT=PORT
+DB_NAME='NAME'
+JWT_SECRET='YOUR-SECRET-TOKEN'
+PORT=YOUR-PORT
+FTP_HOST='YOUR-FTP-HOST-NAME'
+FTP_USER='YOUR-FTP-USERID'
+FTP_PASSWORD='YOUR-FTP-PASSWORD'
+FTP_BASE_URL='YOUR-URL-FOR-FTP-STORAGE'
